--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,3 +16,6 @@ sonar.sourceEncoding=UTF-8
 
 # File yg tidak akan di analisis
 sonar.exclusions=coverage/**, node_modules/**, testing/**
+
+# file coverage
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
