--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,3 +5,8 @@ services:
       - "10000:3000"
     restart: always
     env_file: ./apps/.env
+    volumes:
+      - data_simpleapps:/apps
+volumes:
+  data_simpleapps:
+    driver: local
