--- a/apps/sonar-project.properties
+++ b/apps/sonar-project.properties
@@ -15,7 +15,7 @@ sonar.sources=.
 sonar.sourceEncoding=UTF-8
 
 # File yg tidak akan di analisis
-sonar.exclusions=apps/coverage/**, apps/node_modules/**, apps/testing/**
+sonar.exclusions=apps/coverage/**, apps/node_modules/**, apps/testing/**, apps/Dockerfile
 
 # file coverage
 sonar.javascript.lcov.reportPaths=apps/coverage/lcov.info
